[project]
name = "recommender_ibmws"
version = "0.0.3"
authors = [
  { name="Joana Martins dos Santos", email="joanamlmsantos@gmail.com" },
]
description = "User article recommender system for IBM Watson Studio"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/joanamdsantos/recommender_ibmws_pkg"
Issues = "https://github.com/joanamdsantos/recommender_ibmws_pkg/issues"